--- a/src/app/components/main/canvas/canvas.component.html
+++ b/src/app/components/main/canvas/canvas.component.html
@@ -1,1 +1,8 @@
-<div class="screen"></div>
+<div class="screen" mwlResizable [enableGhostResize]="true"
+    [resizeEdges]="{ bottom: true, right: true, top: true, left: true }"
+    (resizeEnd)="onResizeEnd($event)">
+    <div style="width: 50px; height: 50px; border: solid;"
+        id="container1" class="draggable" cdkDragBoundary=".screen" cdkDrag>
+        Teste
+    </div>
+</div>
