--- a/src/app/components/main/canvas/canvas.component.scss
+++ b/src/app/components/main/canvas/canvas.component.scss
@@ -3,3 +3,19 @@
     width: 100%;
     height: 80vh;
 }
+.draggable {
+    transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+                0 2px 2px 0 rgba(0, 0, 0, 0.14),
+                0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    display: inline-flex;
+}
+.draggable:active {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+                0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+mwlResizable {
+    box-sizing: border-box;
+}
