--- a/src/app/components/main/menu/side-navigation/side-navigation.component.html
+++ b/src/app/components/main/menu/side-navigation/side-navigation.component.html
@@ -10,17 +10,17 @@
                 <div class="logo-element">LC</div>
             </li>
             <li>
-                <a>
+                <a (click)="createComponent('container')">
                     <span class="nav-label">Container</span>
                 </a>
             </li>
             <li>
-                <a>
+                <a (click)="createComponent('label')">
                     <span class="nav-label">Label</span>
                 </a>
             </li>
             <li>
-                <a>
+                <a (click)="createComponent('button')">
                     <span class="nav-label">Button</span>
                 </a>
             </li>
