--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import "~ngx-toastr/toastr.css";
 @import "~animate.css/animate.min.css";
 @import "~jquery-smarttab/dist/css/smart_tab_all.min.css";
+@import "~jquery-smarttab/dist/css/smart_tab.min.css";
 @import "assets/css/style.css";
 
 @-webkit-keyframes fadeInRight {
