--- a/src/app/components/main/canvas/canvas.component.html
+++ b/src/app/components/main/canvas/canvas.component.html
@@ -1,22 +1,24 @@
-<div class="screen" mwlResizable [enableGhostResize]="true" [ngStyle]="style"
-    [validateResize]="validate" id="canvas"
-    [resizeEdges]="{ bottom: true, right: true, top: true, left: true }"
-    (resizeEnd)="onResizeEnd($event)">
+<div class="screen" id="canvas">
     <div *ngFor="let e of elements; let i = index">
         <div *ngIf="e.type === 'container'"
-        [ngStyle]="{width: e.width, height: e.height, 'position': 'absolut', 'border': 'solid'}"
-        mwlResizable [enableGhostResize]="true" [validateResize]="validate"
-        [resizeEdges]="{ bottom: true, right: true, top: true, left: true }"
-        (resizeEnd)="onResizeEnd($event)" (click)="click($event, $event.target)"
-        id="component{{i}}" class="draggable" cdkDragBoundary=".screen" cdkDrag>
+            [ngStyle]="{width: e.width, height: e.height, 'position': 'absolut', 'border': 'solid'}"
+            mwlResizable [enableGhostResize]="true" [validateResize]="validate"
+            [resizeEdges]="{ bottom: true, right: true, top: true, left: true }"
+            (resizeEnd)="onResizeEnd($event)" (click)="click($event, $event.target)"
+            id="component{{i}}" class="draggable" cdkDragBoundary=".screen" cdkDrag>
         </div>
         <button *ngIf="e.type === 'button'" class="btn btn-default draggable"
-        id="component{{i}}" cdkDragBoundary=".screen" cdkDrag (click)="click($event, $event.target)">
+            id="component{{i}}" cdkDragBoundary=".screen" cdkDrag (click)="click($event, $event.target)">
             Botão
         </button>
         <p *ngIf="e.type === 'label'" class="draggable"
-        id="component{{i}}" cdkDragBoundary=".screen" cdkDrag (click)="click($event, $event.target)">
+            id="component{{i}}" cdkDragBoundary=".screen" cdkDrag (click)="click($event, $event.target)">
             Novo Label
         </p>
     </div>
+</div>
+<div class="col-12 text-right">
+    <button type="button" class="btn btn-primary m-t-sm" (click)="apply()">
+        Aplicar
+    </button>
 </div>
