Sending created interface to Server; Updated dependencies; Project ZIP download

--- a/src/app/components/main/comp-infos/comp-infos.component.html
+++ b/src/app/components/main/comp-infos/comp-infos.component.html
@@ -101,7 +101,7 @@
         </div>
     </div>
     <div class="col-12 text-right m-t-sm">
-        <button type="submit" [disabled]="infosForm.invalid || !haveComponent" class="btn btn-info">
+        <button type="submit" [disabled]="infosForm.invalid || !haveComponent" class="btn btn-primary">
             Aplicar
         </button>
     </div>
