--- a/src/app/components/main/menu/side-navigation/side-navigation.component.html
+++ b/src/app/components/main/menu/side-navigation/side-navigation.component.html
@@ -28,7 +28,11 @@
                             Detalhes do projeto
                         </button>
                     </div>
-                    
+                    <div class="text-center m-t-md">
+                        <button type="button" class="btn btn-default" (click)="getBuild()">
+                            Baixar Projeto <i class="fa fa-download"></i>
+                        </button>
+                    </div>
                 </div>
                 <div class="logo-element">LC</div>
             </li>
