Update dependencies; Move enviroment to linux

--- a/src/app/components/main/canvas/canvas.component.html
+++ b/src/app/components/main/canvas/canvas.component.html
@@ -1,18 +1,48 @@
 <div class="screen" id="canvas">
     <div *ngFor="let e of elements; let i = index">
-        <div *ngIf="e.type === 'container'"
-            [ngStyle]="{width: e.width, height: e.height, 'position': 'absolut', 'border': 'solid'}"
-            mwlResizable [enableGhostResize]="true" [validateResize]="validate"
+        <div
+            *ngIf="e.type === 'container'"
+            [ngStyle]="{
+                width: e.width,
+                height: e.height,
+                position: 'absolut',
+                border: 'solid'
+            }"
+            mwlResizable
+            [enableGhostResize]="true"
+            [validateResize]="validate"
             [resizeEdges]="{ bottom: true, right: true, top: true, left: true }"
-            (resizeEnd)="onResizeEnd($event)" (click)="click($event, $event.target)"
-            id="component{{i}}" class="draggable" cdkDragBoundary=".screen" cdkDrag>
-        </div>
-        <button *ngIf="e.type === 'button'" class="btn btn-default draggable"
-            id="component{{i}}" cdkDragBoundary=".screen" cdkDrag (click)="click($event, $event.target)">
+            (resizeEnd)="onResizeEnd($event)"
+            (click)="click($event, $event.target)"
+            cdkDrag
+            cdkDragBoundary=".screen"
+            draggable="true"
+            (cdkDragDropped)="onDrop($event)"
+            id="component{{ i }}"
+            class="draggable"
+        ></div>
+        <button
+            *ngIf="e.type === 'button'"
+            class="btn btn-default draggable"
+            id="component{{ i }}"
+            draggable="true"
+            (cdkDragEnded)="drop($event)"
+            (click)="click($event, $event.target)"
+            cdkDrag
+            cdkDragBoundary=".screen"
+        >
             Botão
         </button>
-        <p *ngIf="e.type === 'label'" class="draggable"
-            id="component{{i}}" cdkDragBoundary=".screen" cdkDrag (click)="click($event, $event.target)">
+        <p
+            *ngIf="e.type === 'label'"
+            class="draggable"
+            id="component{{ i }}"
+            draggable="true"
+            (cdkDragEnded)="drop($event)"
+            (click)="click($event, $event.target)"
+            cdkDrag
+            cdkDragBoundary=".screen"
+        >
             Novo Label
         </p>
     </div>
