--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,3 +40,26 @@
 .btn:disabled {
     cursor: not-allowed;
 }
+
+// Smart Tab
+.st-theme-default > .nav .nav-link.active {
+    color: #18a689 !important;
+}
+.st-theme-default > .nav .nav-link.active::after {
+    background: #18a689 !important;
+}
+.st-theme-classic > .nav .nav-link.active {
+    color: #18a689 !important;
+}
+.st-theme-brick > .nav {
+    border-bottom: 2px solid #18a689 !important;
+}
+.st-theme-brick > .nav .nav-link.active {
+    background: #18a689 !important;
+}
+.st-theme-brick.st-vertical > .nav {
+    border-right: 2px solid #18a689 !important;
+}
+.st-theme-pills > .nav {
+    background: #18a689 !important;
+}
